--- a/index.html
+++ b/index.html
@@ -2,17 +2,37 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
         <title>particle</title>
         <style>
+            *{
+                margin: 0;
+                padding: 0;
+            }
+            html,body{
+                width: 100%;
+                height: 100%;
+            }
+            div{
+                width: 100%;
+                height: 100%;
+                display: flex;
+                align-items: center;
+            }
             #cv{
                 margin: 0 auto;
                 display: block;
+                width: 100%;
+                height: 100%;
                 background-color: #262929;
             }
         </style>
     </head>
     <body>
-        <canvas width="600" height="400" id="cv"></canvas>
+        <div>
+            <canvas id="cv"></canvas>
+        </div>
+        
         <script src="main.js"></script>
     </body>
 </html>
